package kz.astanait.assignment2.ui.button;

/**
 * Abstract Product interface for Button UI components.
 */
public interface Button {
    /**
     * Renders the button component.
     */
    void paint();
}
