package kz.astanait.assignment2.ui.checkbox;

/**
 * Abstract Product interface for Checkbox UI components.
 */
public interface Checkbox {
    /**
     * Renders the checkbox component.
     */
    void paint();
}
