package kz.astanait.assignment2.ui.checkbox;

/**
 * Concrete Checkbox for the macOS UI family.
 */
public class MacOSCheckbox implements Checkbox {
    @Override
    public void paint() {
        System.out.println("Rendering macOS checkbox");
    }
}
