package kz.astanait.assignment2.ui.checkbox;

/**
 * Concrete Checkbox for the Windows UI family.
 */
public class WindowsCheckbox implements Checkbox {
    @Override
    public void paint() {
        System.out.println("Rendering Windows checkbox");
    }
}
